--- a/pages/myRecords.html
+++ b/pages/myRecords.html
@@ -25,18 +25,23 @@
         </div>
         
         <!-- 搜尋條 & 分享、刪除 -->
-        <div class="w-100 mb-12 mb-md-24 px-12 px-sm-4 d-flex flex-column flex-md-row justify-content-between align-items-end  align-items-md-center">
+        <div class="w-100 mb-12 mb-md-24 px-12 px-sm-4 d-flex flex-column flex-md-row justify-content-between align-items-end  align-items-lg-center">
           <!-- 搜尋條 -->
           <form class="w-100 mb-12 mb-md-0" action="" method="get">
-            <div class="w-100 d-flex flex-column flex-md-row align-items-md-center">
-              <div class="box-dates d-flex align-items-center mb-16 mb-md-0">
+            <div class="w-100 d-flex flex-column flex-lg-row align-items-lg-center">
+              <!-- <div class="box-dates d-flex align-items-center mb-16 mb-md-0">
                 <input type="date" class="d-block input-date me-4 me-md-8 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
                 <span class="me-4 me-md-8 text-main-tint01">～</span>
                 <input type="date" class="d-block input-date me-md-12 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
+              </div> -->
+              <div class="box-date d-flex flex-column flex-sm-row align-items-center mb-16 mb-lg-0">
+                <input type="date" class="input-date-analyze d-block px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
+                <span class="mx-8 text-main-tint01">～</span>
+                <input type="date" class="input-date-analyze d-block me-lg-12 px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
               </div>
-              <div class="box-searchBar d-flex align-items-center">
-                <input type="search" class="search-bar me-8 py-12 border border-main-tint02 border-2 rounded-pill" placeholder="請輸入關鍵字">
-                <button type="submit" class="btn btn-main c-btn px-24 py-8 border-0 text-nowrap">搜尋</button>
+              <div class="box-searchBar d-flex flex-column flex-sm-row align-items-center">
+                <input type="search" class="search-bar mb-16 mb-sm-0 me-sm-8 py-12 border border-main-tint02 border-2 rounded-pill" placeholder="請輸入關鍵字">
+                <button type="submit" class="box-btn-search btn btn-main c-btn px-24 py-8 border-0 text-nowrap">搜尋</button>
               </div>
             </div>
           </form>
