--- a/pages/myRecordsAnalyze.html
+++ b/pages/myRecordsAnalyze.html
@@ -26,50 +26,54 @@
             
             
             <!-- 搜尋條 & 分享 -->
-            <div class="mb-24 d-flex justify-content-between align-items-center">
-            <!-- 搜尋條 -->
-                <form action="" method="get">
-                    <div class="d-flex align-items-center">
-                    <input type="date" class="d-block input-date me-8 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
-                    <span class="me-8 text-main-tint01">～</span>
-                    <input type="date" class="d-block input-date me-12 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
-                    <button type="submit" class="btn btn-main c-btn px-24 py-8 border-0">分析</button>
+            <form action="" method="get">
+                <!-- 搜尋條 -->
+                <div class="mb-24 px-12 px-sm-0 d-flex flex-column flex-md-row justify-content-sm-between align-items-center" id="areaSearch">
+                    <div class="box-analyze d-flex flex-column flex-md-row align-items-center">
+                        <div class="box-date-analyze d-flex flex-column flex-sm-row align-items-center mb-16 mb-md-0">
+                            <input type="date" class="input-date-analyze d-block px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
+                            <span class="mx-8 text-main-tint01">～</span>
+                            <input type="date" class="input-date-analyze d-block me-md-12 px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
+                        </div>
+                        <div class="box-btn-analyze">
+                            <button type="submit" class="w-100 btn btn-main c-btn px-24 py-8 border-0 text-nowrap" id="btnAnalyze">分析</button>
+                        </div>
                     </div>
-                </form>
-                <!-- 分享 -->
-                <button class="rounded-pill border-0 fs-4 c-btn-icon">
-                    <i class="bi bi-box-arrow-down"></i>
-                </button>
-            </div>
+                    <!-- 分享 -->
+                    <div class="d-none box-btn-analyze d-flex justify-content-end" id="btnDownload">
+                        <button class="mt-12 mt-md-0 rounded-pill border-0 fs-4 c-btn-icon">
+                            <i class="bi bi-box-arrow-down"></i>
+                        </button>
+                    </div>
+                </div>
+            </form>
 
             <!-- 圖表區 -->
-            <div class="container mb-48">
-                <div class="row align-items-stretch">
-                    <div class="col-6">
-                        <h3 class="mb-8 py-4 fs-5 fw-bold text-main border-bottom border-main-tint02">情緒類組次數</h3>
-                        <p class="mb-36 text-gray-550">下圖為您在此期間記錄的情緒卡，在以下分類中所出現的次數的長條圖。</p>
-                        <div class="py-8 d-flex justify-content-center align-items-center">
-                            <!-- 暫時用假資料 -->
-                            <img src="../assets/images/fakeCharts/BarChart.svg" alt="bar chart">
-                        </div>
+            <div class="d-none px-12 px-sm-0 d-flex flex-column flex-lg-row justify-content-lg-between align-items-center align-items-lg-stretch mb-48" id="areaGraph">
+                <div class="box-47 mb-36 mb-lg-0">
+                    <h3 class="mb-8 py-4 fs-5 fw-bold text-main border-bottom border-main-tint02">情緒類組次數</h3>
+                    <p class="mb-24 text-gray-550">下圖為您在此期間記錄的情緒卡，在以下分類中所出現的次數的長條圖。</p>
+                    <div class="py-8 d-flex justify-content-center align-items-center">
+                        <!-- 暫時用假資料 -->
+                        <img src="../assets/images/fakeCharts/BarChart.svg" alt="bar chart">
                     </div>
-                    <div class="col-6">
-                        <h3 class="mb-8 py-4 fs-5 fw-bold text-main border-bottom border-main-tint02">情緒類組比例</h3>
-                        <p class="mb-36 text-gray-550">下圖為您在此期間記錄的情緒卡，在以下分類中所出現的次數比例的圖餅圖。</p>
-                        <div class="py-8 d-flex justify-content-center align-items-center">
-                            <!-- 暫時用假資料 -->
-                            <img src="../assets/images/fakeCharts/PieChart.svg" alt="pie chart">
-                        </div>
+                </div>
+                <div class="box-47">
+                    <h3 class="mb-8 py-4 fs-5 fw-bold text-main border-bottom border-main-tint02">情緒類組比例</h3>
+                    <p class="mb-24 text-gray-550">下圖為您在此期間記錄的情緒卡，在以下分類中所出現的次數比例的圖餅圖。</p>
+                    <div class="py-8 d-flex justify-content-center align-items-center">
+                        <!-- 暫時用假資料 -->
+                        <img src="../assets/images/fakeCharts/PieChart.svg" alt="pie chart">
                     </div>
                 </div>
             </div>
 
             <!-- 插畫 -->
-            <div class="d-flex justify-content-end">
+            <div class="px-12 px-sm-0 d-flex justify-content-end">
                 <img src="../assets/images/lime-analyze.svg" alt="analyze">
             </div>
             <!-- 圖片引用來源 -->
-            <div class="text-end mb-48">
+            <div class="px-12 px-sm-0 text-end mb-48">
                 <span class="text-gray-500 fs-11">
                     Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                 </span>
@@ -79,5 +83,19 @@
     <%- include('./layout/floatButton') -%>
     <%- include('./layout/footer'); -%>
     <%- include('./layout/baseJs'); -%>
+    <script>
+        const btnAnalyze = document.querySelector('#btnAnalyze');
+        const btnDownload = document.querySelector('#btnDownload');
+        const areaSearch = document.querySelector('#areaSearch');
+        const areaGraph = document.querySelector('#areaGraph');
+
+        btnAnalyze.addEventListener('click', function(){
+            event.preventDefault();
+            btnDownload.classList.remove('d-none');
+            areaGraph.classList.remove('d-none');
+            areaSearch.classList.remove('mb-24');
+            areaSearch.classList.add('mb-md-24');
+        })
+    </script>
 </body>
 </html>
