--- a/myRecords.html
+++ b/myRecords.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script type="module" crossorigin src="/wavemocards/assets/main-3a7e9866.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-a717b611.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-8646ab9c.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-36e1cdcf.css">
   </head>
   <body id="body">
     <header class="header h-logined fixed-top">
@@ -88,18 +88,23 @@
         </div>
         
         <!-- 搜尋條 & 分享、刪除 -->
-        <div class="w-100 mb-12 mb-md-24 px-12 px-sm-4 d-flex flex-column flex-md-row justify-content-between align-items-end  align-items-md-center">
+        <div class="w-100 mb-12 mb-md-24 px-12 px-sm-4 d-flex flex-column flex-md-row justify-content-between align-items-end  align-items-lg-center">
           <!-- 搜尋條 -->
           <form class="w-100 mb-12 mb-md-0" action="" method="get">
-            <div class="w-100 d-flex flex-column flex-md-row align-items-md-center">
-              <div class="box-dates d-flex align-items-center mb-16 mb-md-0">
+            <div class="w-100 d-flex flex-column flex-lg-row align-items-lg-center">
+              <!-- <div class="box-dates d-flex align-items-center mb-16 mb-md-0">
                 <input type="date" class="d-block input-date me-4 me-md-8 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
                 <span class="me-4 me-md-8 text-main-tint01">～</span>
                 <input type="date" class="d-block input-date me-md-12 px-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01">
+              </div> -->
+              <div class="box-date d-flex flex-column flex-sm-row align-items-center mb-16 mb-lg-0">
+                <input type="date" class="input-date-analyze d-block px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
+                <span class="mx-8 text-main-tint01">～</span>
+                <input type="date" class="input-date-analyze d-block me-lg-12 px-2 px-sm-16 py-6 border border-main-tint02 border-2 rounded-pill text-main-tint01 text-center">
               </div>
-              <div class="box-searchBar d-flex align-items-center">
-                <input type="search" class="search-bar me-8 py-12 border border-main-tint02 border-2 rounded-pill" placeholder="請輸入關鍵字">
-                <button type="submit" class="btn btn-main c-btn px-24 py-8 border-0 text-nowrap">搜尋</button>
+              <div class="box-searchBar d-flex flex-column flex-sm-row align-items-center">
+                <input type="search" class="search-bar mb-16 mb-sm-0 me-sm-8 py-12 border border-main-tint02 border-2 rounded-pill" placeholder="請輸入關鍵字">
+                <button type="submit" class="box-btn-search btn btn-main c-btn px-24 py-8 border-0 text-nowrap">搜尋</button>
               </div>
             </div>
           </form>
